Bug 214287 - webkit does not support kwallet
Summary: webkit does not support kwallet
Status: RESOLVED FIXED
Alias: None
Product: kdelibs
Classification: Unmaintained
Component: kdewebkit (other bugs)
Version First Reported In: unspecified
Platform: unspecified Linux
: NOR normal
Target Milestone: ---
Assignee: webkit-bugs-null
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2009-11-12 18:27 UTC by Ferdinand Gassauer
Modified: 2010-11-18 14:53 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
source code of the page (8.68 KB, text/html)
2009-11-21 14:58 UTC, Ferdinand Gassauer
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Ferdinand Gassauer 2009-11-12 18:27:06 UTC
Version:            (using 4.3.3 (KDE 4.3.3) "release 1", KDE:43 / openSUSE_11.1)
Compiler:          gcc
OS:                Linux (x86_64) release 2.6.27.37-0.1-default

after switching from khtml to webkit kwallet is not used any more - neither to supply already stored information nor to store new info.
Comment 1 Ferdinand Gassauer 2009-11-12 18:28:40 UTC
btw - I do not encounter other problems using webkit in 4.3.3.
Comment 2 Dawit Alemayehu 2009-11-12 19:03:15 UTC
On Thursday 12 November 2009 12:27:08 Ferdinand Gassauer wrote:
> https://bugs.kde.org/show_bug.cgi?id=214287
> 
>            Summary: webkit does not support kwallet
>            Product: webkitkde
>            Version: unspecified
>           Platform: unspecified
>         OS/Version: Linux
>             Status: NEW
>           Severity: normal
>           Priority: NOR
>          Component: WebKit KPart
>         AssignedTo: webkit-devel@kde.org
>         ReportedBy: gassauer@kde.org
> 
> 
> Version:            (using 4.3.3 (KDE 4.3.3) "release 1", KDE:43 /
> openSUSE_11.1)
> Compiler:          gcc
> OS:                Linux (x86_64) release 2.6.27.37-0.1-default
> 
> after switching from khtml to webkit kwallet is not used any more - neither
>  to supply already stored information nor to store new info.

KWallet integration is planned, but not yet completed...
Comment 3 Dawit Alemayehu 2009-11-12 19:03:35 UTC
On Thursday 12 November 2009 12:28:40 Ferdinand Gassauer wrote:
> --- Comment #1 from Ferdinand Gassauer <gassauer kde org>  2009-11-12
>  18:28:40 --- btw - I do not encounter other problems using webkit in
>  4.3.3.

Does this mean that all the other outstanding issues you reported are all gone 
now so those bug reports can be closed ?
Comment 4 Ferdinand Gassauer 2009-11-12 20:14:46 UTC
no - the problems are still there - what I ment is that webkit is much better than khtml now - and ready for daily use - after integration of kwallet - which is important
this does not mean that there may not exists some little  problems
Comment 5 Ferdinand Gassauer 2009-11-20 07:26:54 UTC
what I actuallly wanted to say is that the webkit rendering is great
except one site (D-link Dir-635 router amdin page which does not allow/accept mouse clicks) I didn't experience rendering problems
Comment 6 Dawit Alemayehu 2009-11-20 20:05:13 UTC
On Friday 20 November 2009 01:26:58 Ferdinand Gassauer wrote:
> https://bugs.kde.org/show_bug.cgi?id=214287
> 
> 
> 
> 
> 
> --- Comment #5 from Ferdinand Gassauer <gassauer kde org>  2009-11-20
>  07:26:54 --- what I actuallly wanted to say is that the webkit rendering
>  is great except one site (D-link Dir-635 router amdin page which does not
>  allow/accept mouse clicks) I didn't experience rendering problems

I have a similar D-Link router (DIR-615) and I do not have any issues with any 
of its pages. I am curious if all of your problems are caused by these web 
pages sniffing your browser agent string... Can you try the following to see if 
your problems get resolved ?

#1. Add the entry below to the default section (read: top of file) of either
$KDEHOME/share/config/kioslaverc or $KDEHOME/share/config/kio_httprc

UserAgent="Mozilla/5.0 (X11; U; Linux; en-US) AppleWebKit/527+ (KHTML, like 
Gecko, Safari/419.3)  konqueror/4.3.3"

#2. Restart kdeinit4. You can simply type it in the Runner (ALT+F2) dialog.
Comment 7 Ferdinand Gassauer 2009-11-21 14:58:11 UTC
Created attachment 38470 [details]
source code of the page
Comment 8 Ferdinand Gassauer 2009-11-21 15:00:06 UTC
tried also konqueror with  various browser identifications and with Arora 0.10.1 - same problem  - page 
works with safari on Snow Leopard
Comment 9 Dawit Alemayehu 2009-12-05 07:01:52 UTC
SVN commit 1058762 by adawit:

- Prepended all the private slots with "slot" for consistency.
- Let there be KWallet integration. The only thing left is the status bar integration as done in khtml.
- Bumped the kwebkitpart version number to 0.4.

BUG:214287
CCMAIL:webkit-devel@kde.org


 M  +1 -2      kdewebkit/kwebpage.cpp  
 M  +3 -1      part/CMakeLists.txt  
 A             part/ui/passwordbar.cpp   [License: LGPL (v2+)]
 A             part/ui/passwordbar.h   [License: LGPL (v2+)]
 A             part/ui/passwordbar.ui  
 M  +160 -144  part/webkitpart.cpp  
 M  +12 -12    part/webkitpart.h  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1058762
Comment 10 Dario Andres 2010-11-18 14:53:31 UTC
[Comment from a bug triager]
Moving old kdewebkit bug reports to kdelibs/kdewebkit. Sorry about the noise