- Prepended all the private slots with "slot" for consistency. - Let there be KWallet integration. The only thing left is the status bar integration as done in khtml. - Bumped the kwebkitpart version number to 0.4.

BUG:214287
CCMAIL:webkit-devel@kde.org